--- a/fuser-search-min-styles.css
+++ b/fuser-search-min-styles.css
@@ -1,1 +1,1 @@
-[data-fuse-item],[fuse-initial-hidden]{display:none}[data-fuse-highlight]{background:#ffe6e6}
+[data-fuse-item],[fuse-initial-state=”true”]{display:none}[data-fuse-highlight]{background:#ffe6e6}
